Bug 1180123 (part 1) - Report the size of the saved stacks sets. r=fitzgen.